--- a/templates/index.html
+++ b/templates/index.html
@@ -5,6 +5,10 @@
         <meta charset="UTF-8">
         <link rel="icon" type="image/x-icon" href="{{ url_for('static',filename='css/clickasnap.svg') }}">
         <link rel= "stylesheet" type= "text/css" href= "{{ url_for('static',filename='css/styles.css') }}">
+        <script src="https://aframe.io/releases/1.0.4/aframe.min.js"></script>
+        <script src="https://raw.githack.com/AR-js-org/AR.js/master/aframe/build/aframe-ar.js"></script>
+        <script src="https://raw.githack.com/AR-js-org/studio-backend/master/src/modules/marker/tools/gesture-detector.js"></script>
+        <script src="https://raw.githack.com/AR-js-org/studio-backend/master/src/modules/marker/tools/gesture-handler.js"></script>
         <title> Vengeful Vegetables </title>
     </head>
     <nav>
@@ -22,9 +26,35 @@
         <main> <!-- THIS IS WHERE THE MAIN THINGY IS-->
             <div>
                 <div>
-                    <canvas> <!-- ADD IMAGE -->
-                        
-                    </canvas>
+                    <a-scene
+                    vr-mode-ui="enabled: false;"
+                    loading-screen="enabled: false;"
+                    arjs="trackingMethod: best; sourceType: webcam; debugUIEnabled: false;"
+                    id="scene"
+                    embedded
+                    gesture-detector
+                >
+                    <a-marker
+                        id="animated-marker"
+                        type="pattern"
+                        preset="custom"
+                        url="assets/marker.patt"
+                        raycaster="objects: .clickable"
+                        emitevents="true"
+                        cursor="fuse: false; rayOrigin: mouse;"
+                        id="markerA"
+                    >
+                        <a-image
+                            src="assets/asset.png"
+                            scale="1 1 1"
+                            class="clickable"
+                            rotation="-90 0 0"
+                            gesture-handler
+                        ></a-image>
+                    </a-marker>
+        
+                    <a-entity camera></a-entity>
+                </a-scene>
                 </div>
             </div>
         </main>
