Testing returning image to HTML

--- a/templates/index.html
+++ b/templates/index.html
@@ -72,6 +72,7 @@
                     body: JSON.stringify({prompt: prompt})
                 })
                 .then(response => {
+                    console.log(response)
                     if (response.ok) {
                         console.log('Input sent to Flask server');
                     } else{
