--- a/templates/index.html
+++ b/templates/index.html
@@ -3,20 +3,22 @@
 <html lang="EN">
     <head>
         <meta charset="UTF-8">
-        <link rel="icon" type="image/x-icon" href="{{ url_for('static',filename='css/clickasnap.svg') }}">
+        <link rel="icon" type="image/x-icon" href="{{ url_for('static',filename='css/teemill.svg') }}">
         <link rel= "stylesheet" type= "text/css" href= "{{ url_for('static',filename='css/styles.css') }}">
+        
         <script src="https://aframe.io/releases/1.0.4/aframe.min.js"></script>
         <script src="https://raw.githack.com/AR-js-org/AR.js/master/aframe/build/aframe-ar.js"></script>
         <script src="https://raw.githack.com/AR-js-org/studio-backend/master/src/modules/marker/tools/gesture-detector.js"></script>
         <script src="https://raw.githack.com/AR-js-org/studio-backend/master/src/modules/marker/tools/gesture-handler.js"></script>
+
+
+        <script src="{{ url_for('static',filename='script/splash.js') }}"> </script>
+
         <title> Vengeful Vegetables </title>
     </head>
-    <nav>
-        <img src="{{ url_for('static',filename='images/clickasnap.svg') }}">
-        <img src="{{ url_for('static',filename='images/teemill.svg') }}">
-        <h1> Vengeful Vegetables </h1>
-
-    </nav>
+    <div class="splash">
+        <img class="splash-icon" src="{{ url_for('static',filename='images/teemill_full.svg') }}">
+    </div>
     <body style="margin: 0; overflow: hidden;">
         <form id="inputForm">
             <label for="promptInput">Enter a prompt:</label>
@@ -25,37 +27,7 @@
         </form>
         <main> <!-- THIS IS WHERE THE MAIN THINGY IS-->
             <div>
-                <div>
-                    <a-scene
-                    vr-mode-ui="enabled: false;"
-                    loading-screen="enabled: false;"
-                    arjs="trackingMethod: best; sourceType: webcam; debugUIEnabled: false;"
-                    id="scene"
-                    embedded
-                    gesture-detector
-                >
-                    <a-marker
-                        id="animated-marker"
-                        type="pattern"
-                        preset="custom"
-                        url="{{ url_for('static',filename='assets/AR/marker.patt')}}"
-                        raycaster="objects: .clickable"
-                        emitevents="true"
-                        cursor="fuse: false; rayOrigin: mouse;"
-                        id="markerA"
-                    >
-                        <a-image
-                            src="{{ url_for('static',filename='assets/AR/asset.png') }}"
-                            scale="1 1 1"
-                            class="clickable"
-                            rotation="-90 0 0"
-                            gesture-handler
-                        ></a-image>
-                    </a-marker>
-        
-                    <a-entity camera></a-entity>
-                </a-scene>
-                </div>
+            
             </div>
         </main>
         <script>
