--- a/templates/index.html
+++ b/templates/index.html
@@ -3,7 +3,7 @@
 <html lang="EN">
     <head>
         <meta charset="UTF-8">
-        <link rel="icon" type="image/x-icon" href="{{ url_for('static',filename='css/teemill.svg') }}">
+        <link rel="icon" type="image/x-icon" href="{{ url_for('static',filename='images/teemill.svg') }}">
         <link rel= "stylesheet" type= "text/css" href= "{{ url_for('static',filename='css/styles.css') }}">
         
         <script src="https://aframe.io/releases/1.0.4/aframe.min.js"></script>
@@ -17,7 +17,10 @@
         <title> Vengeful Vegetables </title>
     </head>
     <div class="splash">
-        <img class="splash-icon" src="{{ url_for('static',filename='images/teemill_full.svg') }}">
+        <div class="splash-content">
+            <img src="{{ url_for('static',filename='images/teemill_full.svg') }}"/>
+            <h1> Tap to Start </h1>
+        </div>
     </div>
     <body style="margin: 0; overflow: hidden;">
         <form id="inputForm">
