--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -154,20 +154,20 @@ button:active {
   }
   
   canvas {
-    position: relative;
-    top: -7.5%;
-    left: 50%;
-    transform: translate(-50%, 0);
-    max-width: 100%;
-    max-height: 100%;
+    position: absolute;
     box-shadow: 0 0 4px;
+    height: 75vw;
+    width: 75vw;
   }
   
   .align-right {
     float: right;
   }
   
-  .displayedImage {
-    max-width: 100%;
-    max-height: 100%;
+  #displayedImage {
+    z-index: 1;
+    position: absolute;
+    display: none;
+    height: 75vw;
+    width: 75vw;
 }
