--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -1,38 +1,30 @@
+/** GENERAL **/
+
 * {
     overflow-x: hidden;
+    overflow-y: hidden;
     font-family: 'Segoe UI';
 }
 
-.splash {
+body {
+    height: 100vh;
+    width: 100vw;
+    margin: 0;
+}
+
+/*** SPLASH SCREEN ****/
+
+.splash-screen {
     z-index: 1;
     position: absolute;
-    width: 100vw;
-    height: 100vh;
+    width: 100%;
+    height: 100%;
     background-color: white;
     display: flex;
     justify-content: center;
     flex-direction: column;
     align-items: center;
-    /*display: none; /* hide this if needed */
     transition: all ease-in-out 600ms;
-}
-
-.splash-content img {
-    align-items: center;
-    width: 50vw;
-    height: 50vw;
-}
-
-.splash-content h1 {
-    font-family: 'Segoe UI';
-    font-weight: 600;
-    color: #2c2d2d;
-    font-size: 3vw;
-}
-
-.hidden {
-    transform: all linear 0.5s;
-    display: none;
 }
 
 .splash-content {
@@ -45,6 +37,26 @@
     transition: all linear 1000ms, transform ease-in-out 900ms;
 }
 
+.splash-content img {
+    align-items: center;
+    width: 50vw;
+    max-width: 720px;
+}
+
+.splash-content h1 {
+    font-family: 'Segoe UI';
+    font-weight: 400;
+    color: #2c2d2d;
+    font-size: 1rem;
+}
+
+/* SPLASH SCREEN ANIMATIONS */
+
+.hidden {
+    transform: all linear 0.5s;
+    display: none;
+}
+
 .grow {
     transform: scale(100%);
     opacity: 1;
@@ -54,6 +66,8 @@
     transform: translateY(100vh);
 }
 
+/* MAIN AREA */
+
 main {
     overflow: hidden;
     position: relative;
@@ -62,22 +76,15 @@ main {
     justify-content: center;
 }
 
-#ar {
-    height: 50vw;
-}
-
 nav {
+    height: 10vh;
     display: flex;
     align-items: center;
+    background-color: red;
 }
 
 nav img {
-    height: 12vw;
-    padding: 2vw;
-}
-
-nav h1 {
-    font-size: 7vw;
+    height: 10vh;
 }
 
 #camera-overlay {
@@ -109,6 +116,8 @@ nav h1 {
     padding: 2vw;
 }
 
+/* BUTTONS */
+
 button {
     margin: 2vw;
     width: 50vw;
@@ -118,13 +127,21 @@ button {
     background-color: #0aadff;
     color: white;
     border: none;
+    transition: transform ease-in-out 0.5s;
+}
+
+button:hover {
+    transform: scale(110%);
 }
 
 button:active {
     background-color: white;
     color: #0aadff;
     border: solid 2px #0aadff;
+    transform: scale(110%);
 }
+
+/**/
 
 #button-box {
     width: 75vw;
