--- a/templates/index.html
+++ b/templates/index.html
@@ -11,7 +11,7 @@
 
         <title> Vengeful Vegetables </title>
     </head>
-    <div class="splash">
+    <div class="splash-screen">
         <div class="splash-content">
             <img src="{{ url_for('static',filename='images/teemill_full.svg') }}"/>
             <h1> Tap to Start </h1>
@@ -21,7 +21,7 @@
         <button id="close-camera" style="position: absolute;"> Close </button>
         <iframe src="{{ url_for('static',filename='pages/arjs_scene.html') }}" width="100%" height="100%" frameBorder="0"></iframe>
     </div>
-    <body style="margin: 0; overflow: hidden;">
+    <body>
         <nav>
             <img src="{{ url_for('static',filename='images/teemill.svg') }}">
             <h1> Vengeful Vegetables </h1>
