--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -2,7 +2,6 @@
 
 * {
     overflow-x: hidden;
-    overflow-y: hidden;
     font-family: 'Segoe UI';
 }
 
@@ -53,7 +52,6 @@ body {
 /* SPLASH SCREEN ANIMATIONS */
 
 .hidden {
-    transform: all linear 0.5s;
     display: none;
 }
 
@@ -69,23 +67,26 @@ body {
 /* MAIN AREA */
 
 main {
-    overflow: hidden;
     position: relative;
     display: flex;
     flex-direction: column;
     justify-content: center;
+    min-width: 50vw;
 }
 
 nav {
     height: 10vh;
     display: flex;
     align-items: center;
-    background-color: red;
+    font-size: 1.2em;
 }
 
 nav img {
-    height: 10vh;
+    margin: 0vw 2vw;
+    height: 5vh;
 }
+
+/* CAMERA */
 
 #camera-overlay {
     display: none;
@@ -98,18 +99,16 @@ nav img {
 }
 
 
-#inputPrompt {
+
+
+#prompt-container {
     margin: 0 auto;
     width: 75vw;
     display: flex;
     flex-direction: column;
 }
 
-#inputPrompt p {
-    font-size: 3vw;
-}
-
-#inputPrompt input {
+#prompt-container input {
     height: 10vw;
     font-size: 5vw;
     border-radius: 2vw;
@@ -143,7 +142,7 @@ button:active {
 
 /**/
 
-#button-box {
+#button-container {
     width: 75vw;
     margin: 0 auto;
     display: flex;
@@ -152,7 +151,7 @@ button:active {
     justify-content: center;
 }
 
-#main-frame {
+#canvas-container {
     margin: 10vw auto;
     width: 75vw;
     height: 75vw;
@@ -160,28 +159,15 @@ button:active {
     border-radius: 2vw;
     overflow: hidden;
 }
-
-  .canvas-container {
-    position: relative;
-    height: calc(100vh - 55px);
-  }
   
-  .hidden {
-    display: none;
-  }
-  
-  canvas {
+#drawing-canvas {
     position: absolute;
     box-shadow: 0 0 4px;
     height: 75vw;
     width: 75vw;
-  }
+}
   
-  .align-right {
-    float: right;
-  }
-  
-  #displayedImage {
+#output-image {
     z-index: 1;
     position: absolute;
     display: none;
