--- a/templates/index.html
+++ b/templates/index.html
@@ -33,11 +33,12 @@
     <main>
         <div id="prompt-container">
             <p>Enter a prompt:</p>
-            <input type="text" id="promptInput" name="prompt">
+            <input type="text" id="prompt-input" name="prompt">
         </div>
         <div id="canvas-container">
-            <img src="" id="output-image" width="100%" height="100%"/>
+            <img src="" id="output-image" width="100%" height="100%" alt="ERROR"/>
             <canvas id="drawing-canvas" width="100%" height="100%"></canvas>
+            <div id="loader" class="grow"></div>
         </div>
         <div id="button-container">
             <div id="gen-button-container">
@@ -45,15 +46,17 @@
                 <button id="search-image-button"> Search ClickASnap </button>
             </div>
             <div id="extra-button-container">
-                <button id="open-camera-button"> View in AR </button>
-                <button id="clear-image-button"> Clear </button>
-                <button id="purchase-button"> Buy Shirt </button>
+                <div id="extra-button-container-row">
+                    <button id="open-camera-button"> View in AR </button>
+                    <button id="clear-image-button"> Clear </button>
+                </div>
+                <button id="purchase-item-button"> Buy Shirt </button>
             </div>
         </div>
 
     </main>
     <script src="{{ url_for('static',filename='script/splash.js') }}"> </script>
-    <script src="{{ url_for('static',filename='script/index.js')}}"></script>
-    <script src="{{ url_for('static',filename='script/buttons.js')}}"></script>
+    <script src="{{ url_for('static',filename='script/gen_buttons.js')}}"></script>
+    <script src="{{ url_for('static',filename='script/extra_buttons.js')}}"></script>
 </body>
 </html>
