--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -1,15 +1,15 @@
 /** GENERAL **/
 
 * {
-    overflow-x: hidden;
     font-family: 'Segoe UI';
 }
 
 body {
+    overflow-x: hidden;
     z-index: 0;
-    height: 100vh;
     width: 100vw;
     margin: 0;
+    overflow-y:hidden;
 }
 
 /*** SPLASH SCREEN ****/
@@ -17,14 +17,15 @@ body {
 .splash-screen {
     z-index: 999;
     position: absolute;
-    width: 100%;
-    height: 100%;
+    width: 100vw;
+    height: 100vh;
     background-color: white;
     display: flex;
     justify-content: center;
     flex-direction: column;
     align-items: center;
     transition: all ease-in-out 600ms;
+    overflow: hidden;
 }
 
 .splash-content {
@@ -68,18 +69,32 @@ body {
 /* MAIN AREA */
 
 main {
+    margin-top: 10vh;
     position: relative;
     display: flex;
     flex-direction: column;
     justify-content: center;
-    min-width: 50vw;
+    align-items: center;
+    width: 100%;
+    height: 100%;
 }
 
 nav {
     height: 10vh;
     display: flex;
     align-items: center;
+    justify-content: center;
     font-size: 1.2em;
+}
+
+#container {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    width: 100%;
+    max-width: 750px;
+    background-color: white;
 }
 
 nav img {
@@ -105,26 +120,32 @@ nav img {
 
 #prompt-container {
     margin: 0 auto;
-    width: 75vw;
+    width: 90%;
     display: flex;
     flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    max-height: 75px;
+    max-width: 750px;
 }
 
 #prompt-container input {
-    height: 10vw;
-    font-size: 5vw;
-    border-radius: 2vw;
-    padding: 2vw;
+    height: 75%;
+    max-height: 200px;
+    padding: 10px;
+    font-size: 20px;
+    border-radius: 10px;
 }
 
 
 #canvas-container {
-    margin: 10vw auto;
-    width: 75vw;
-    height: 75vw;
-    border: solid rgb(60, 60, 60) 2px;
-    border-radius: 2vw;
-    overflow: hidden;
+    position: relative;
+    margin: 50px auto;
+    width: calc(90% - 4px);
+    max-width: 750px;
+    aspect-ratio: 1;
+    border: solid rgb(100, 100, 100) 2px;
+    border-radius: 10px;
     display: flex;
     align-items: center;
     justify-content: center;
@@ -132,8 +153,10 @@ nav img {
   
 #drawing-canvas {
     position: absolute;
-    height: 75vw;
-    width: 75vw;
+    width: 100%;
+    aspect-ratio: 1;
+    max-width: 750px;
+    border-radius: 10px;
 }
   
 #output-image {
@@ -141,16 +164,18 @@ nav img {
     opacity: 0;
     position: absolute;
     display: none;
-    height: 75vw;
-    width: 75vw;
+    max-width: 750px;
+    width: 100%;
+    aspect-ratio: 1;
+    border-radius: 10px;
     transition: opacity ease-in-out 1s;
 }
 
 /* BUTTONS */
 
 button {
-    width: 50vw;
-    height: 10vw;
+    width: 72px;
+    height: 72px;
     border-radius: 5vw;
     font-size: 1rem;
     background-color: #0aadff;
@@ -174,7 +199,7 @@ button:active {
 }
 
 #button-container {
-    width: 100%;
+    width: 90%;
     margin: 0 auto;
     display: flex;
     align-items: center;
@@ -186,11 +211,12 @@ button:active {
     width: 100%;
     display: flex;
     align-items: center;
+    justify-content: center;
     flex-direction: row;
 }
 
 #button-container button {
-    width: 48%;
+    width: 40%;
     overflow: hidden;
     margin: 1%;
 }
@@ -209,6 +235,7 @@ button:active {
     align-items: center;
     display: flex;
     flex-direction: column;
+    justify-content: center;
     display: none;
 }
 
@@ -216,13 +243,17 @@ button:active {
     width: 100%;
     display: flex;
     flex-direction: row;
+    justify-content: center;
+    align-items: center;
 }
 
 #open-camera-button {
+    width: 70%;
     border-radius: 5vw 0vw 0vw 5vw;
 }
 
 #clear-image-button {
+    width: 30%;
     border-radius: 0vw 5vw 5vw 0vw;
 }
 
