--- a/templates/index.html
+++ b/templates/index.html
@@ -21,7 +21,7 @@
 
 <div id="camera-overlay">
     <button id="close-camera-button" class="flat-button" style="position: absolute;">x</button>
-    <iframe src="{{ url_for('static',filename='pages/arjs_scene.html') }}" width="100%" height="100%" frameBorder="0"></iframe>
+    <iframe id="iframe" src="{{ url_for('static',filename='pages/arjs_scene.html') }}" width="100%" height="100%" frameBorder="0"></iframe>
 </div>
 
 
