Changed Webpage Tile

--- a/templates/index.html
+++ b/templates/index.html
@@ -28,7 +28,7 @@
 <body>
     <nav>
         <img src="{{ url_for('static',filename='images/teemill.svg') }}">
-        <h1> Vengeful Vegetables </h1>
+        <h1> TeeMill T-Shirt Generator </h1>
     </nav>
     <main>
         <div id="container">
